--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 attrs==21.2.0
+click==8.0.3
+dataclasses==0.8
+Flask==2.0.2
 importlib-metadata==4.8.1
 iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.2
+MarkupSafe==2.0.1
 packaging==21.2
+pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.11.0
 pyparsing==2.4.7
 pytest==6.2.4
 toml==0.10.2
 typing-extensions==3.10.0.2
+Werkzeug==2.0.2
 zipp==3.6.0
